@@ -19,6 +19,8 @@
  */
 package org.sonar.db.notification;
 
+import java.io.ByteArrayInputStream;
+import java.io.ObjectInputStream;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.IntStream;
@@ -72,7 +74,6 @@ public class NotificationQueueDaoTest {
       .mapToObj(i -> toNotificationQueueDto(new Notification("foo_" + i)))
       .collect(toList());
     dao.insert(notifs);
-    db.commit();
 
     List<String> uuids = selectAllUuid();
 
@@ -97,11 +98,12 @@ public class NotificationQueueDaoTest {
       .mapToObj(i -> toNotificationQueueDto(new Notification("foo_" + i)))
       .collect(toList());
     dao.insert(notifs);
-    db.commit();
 
     assertThat(dao.selectOldest(3))
-      .extracting(NotificationQueueDto::getUuid)
-      .containsExactlyElementsOf(Arrays.asList("1", "2", "3"));
+      .extracting(NotificationQueueDto::getData)
+      .map(bytes -> new ObjectInputStream(new ByteArrayInputStream(bytes)).readObject())
+      .extracting("type")
+      .containsExactlyElementsOf(List.of("foo_0", "foo_1", "foo_2"));
   }
 
   private List<String> selectAllUuid() {
